JW logo padding fix on mobile device

--- a/1b226b78-7549-11ec-90d6-0242ac120003/custom.css
+++ b/1b226b78-7549-11ec-90d6-0242ac120003/custom.css
@@ -22,7 +22,7 @@ div#productDescription {
 }
 #corporate_logo {
     max-height: 189px;
-    padding: 120px 450px 0 0;
+    padding: 120px 190px 0 0;
     background: url('logo.png') no-repeat center;
     background-size: contain;
     width: 0;
